--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"astro": "5.14.8",
 		"astro-expressive-code": "^0.41.3",
 		"astro-icon": "^1.1.5",
+		"astro-iconify": "^1.2.0",
 		"astro-robots-txt": "^1.0.0",
 		"astro-webmanifest": "^1.0.0",
 		"cssnano": "^7.1.1",
@@ -43,7 +44,9 @@
 	"devDependencies": {
 		"@astrojs/check": "^0.9.5",
 		"@biomejs/biome": "^2.2.6",
+		"@iconify-json/academicons": "^1.2.4",
 		"@iconify-json/mdi": "^1.2.2",
+		"@iconify-json/simple-icons": "^1.2.58",
 		"@pagefind/default-ui": "^1.4.0",
 		"@resvg/resvg-js": "^2.6.2",
 		"@tailwindcss/typography": "^0.5.19",
