--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-	"name": "",
+	"name": "moritzertelt-github-io",
 	"type": "module",
 	"version": "6.10.0",
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
-		"postbuild": "pagefind --site dist",
 		"preview": "astro preview",
 		"lint": "biome lint .",
 		"format": "pnpm run format:code && pnpm run format:imports",
@@ -16,9 +15,6 @@
 	},
 	"dependencies": {
 		"@astrojs/markdown-remark": "^6.3.8",
-		"@astrojs/mdx": "4.3.7",
-		"@astrojs/rss": "4.0.12",
-		"@astrojs/sitemap": "3.6.0",
 		"@tailwindcss/vite": "4.1.17",
 		"astro": "5.14.8",
 		"astro-expressive-code": "^0.41.3",
@@ -47,13 +43,11 @@
 		"@iconify-json/academicons": "^1.2.4",
 		"@iconify-json/mdi": "^1.2.2",
 		"@iconify-json/simple-icons": "^1.2.58",
-		"@pagefind/default-ui": "^1.4.0",
 		"@resvg/resvg-js": "^2.6.2",
 		"@tailwindcss/typography": "^0.5.19",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.4",
 		"autoprefixer": "^10.4.21",
-		"pagefind": "^1.4.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "0.14.1",
 		"prettier-plugin-tailwindcss": "^0.7.1",
